--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+@charset "utf-8";
 @import url(//fonts.googleapis.com/earlyaccess/hanna.css);
 .App {
     text-align: center;
     font-family: 'Hanna', fantasy
+}
+
+*,
+*::before::,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
