--- a/src/components/MainVideo.css
+++ b/src/components/MainVideo.css
@@ -1,19 +1,20 @@
 h1 {
-    margin: 0
+  margin: 0;
 }
 
 .media-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    padding-bottom: 56.25%;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  padding-bottom: 56.25%;
 }
 
 .media-container iframe {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
 }
+/*# sourceMappingURL=MainVideo.css.map */
