--- a/src/components/Maincolumn.css
+++ b/src/components/Maincolumn.css
@@ -1,16 +1,22 @@
 .Container {
-    width: 1080px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between
+  width: 1080px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.Main-Items {
+  height: 1600px;
+  width: 320px;
 }
 
 .Main-Item {
-    background-color: pink;
-    height: 700px;
-    width: 320px
+  background-color: pink;
+  height: 500px;
+  padding-bottom: 10px;
 }
-
-.First {}
-
-.Second {}
+/*# sourceMappingURL=Maincolumn.css.map */
