--- a/src/components/Maincolumn.css
+++ b/src/components/Maincolumn.css
@@ -1,22 +1,25 @@
-.Container {
-  width: 1080px;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.main-container {
+    width: 1080px;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
 }
 
-.Main-Items {
-  height: 1600px;
-  width: 320px;
+.main-column {
+    height: 1600px;
+    width: 320px;
 }
 
-.Main-Item {
-  background-color: pink;
-  height: 500px;
-  padding-bottom: 10px;
+.main-item {
+    background-color: blanchedalmond;
+    height: 500px;
+    padding: 5px 10px;
+    margin-top: 20px;
 }
+
+
 /*# sourceMappingURL=Maincolumn.css.map */
