--- a/src/components/Maincolumn.scss
+++ b/src/components/Maincolumn.scss
@@ -1,17 +1,18 @@
-.Container {
+.main-container {
     width: 1080px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between
 }
 
-.Main-Items {
+.main-column {
     height: 1600px;
     width: 320px
 }
 
-.Main-Item {
+.main-item {
     background-color: pink;
     height: 500px;
-    padding-bottom: 10px
+    padding: 5px 10px;
+    margin-top: 20px
 }
