--- a/src/components/main/MainItems/Mainitem.css
+++ b/src/components/main/MainItems/Mainitem.css
@@ -4,7 +4,7 @@
     padding-bottom: 20px;
     margin-top: 20px;
     font-size: 20px;
-    background-image: url(../../../images/divider.jpg);
+    background-image: url(../../../images/divider.svg);
     background-position-x: 0px;
     background-position-y: 0px;
     background-size: initial;
