--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 @charset "utf-8";
 @import url(//fonts.googleapis.com/earlyaccess/hanna.css);
-*,
-*::before::,
-*::after {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
