--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,22 +1,38 @@
 .menu {
     position: relative;
-    float: left;
-    margin: 50px;
+    background: rgba(17, 17, 17, 0.85);
+    z-index: 1;
+    text-align: start;
+}
+
+.btnSection {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(17, 17, 17, 0.85);
+    ;
 }
 
 .menuBtn {
     width: 60px;
     height: 60px;
     position: fixed;
+    top: 50px;
+    left: 50px;
 }
 
 .router-menu {
     position: fixed;
-    margin-left: 100px;
+    top: 50px;
+    left: 150px;
 }
 
 .router-menu>ul>a {
     font-size: 30px;
     text-decoration: none;
-    color: #181818
+    color: #fff;
+}
+
+ul {
+    margin-top: 20px;
 }
