Complete react-fontAwesome

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 @import url(//fonts.googleapis.com/earlyaccess/hanna.css);
 * {
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
@@ -10,4 +9,14 @@
     text-align: center;
     font-family: 'Hanna', fantasy;
     background-color: #fafafa
+}
+
+.footer {
+    position: relative;
+    min-width: 1081px;
+    width: 1081px;
+    margin: 57px auto 0;
+    padding-left: 55px;
+    padding-bottom: 60px;
+    border-top: 1px solid
 }
