--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -17,22 +17,23 @@
     width: 60px;
     height: 60px;
     position: fixed;
-    top: 50px;
-    left: 50px;
+    top: 25px;
+    left: 25px;
 }
 
 .router-menu {
     position: fixed;
-    top: 50px;
+    top: 20px;
     left: 150px;
 }
 
 .router-menu>ul>a {
-    font-size: 30px;
+    font-size: 50px;
     text-decoration: none;
     color: #fff;
+    padding-bottom: 100px;
 }
 
 ul {
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
