Change video, md. Delete scss
I can't use scss very well. So I can scss later

--- a/src/components/main/MainItems/Mainitem.css
+++ b/src/components/main/MainItems/Mainitem.css
@@ -4,7 +4,7 @@
     padding-bottom: 20px;
     margin-top: 20px;
     font-size: 20px;
-    background-image: url(../../../images/divider.svg);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/fbtestdw.appspot.com/o/longDivider.svg?alt=media&token=de6143e9-5e14-425c-8b23-5f983e5898fd);
     background-position-x: 0px;
     background-position-y: 0px;
     background-size: initial;
