--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,7 +3,32 @@
     min-width: 1081px;
     width: 1081px;
     margin: 57px auto 0;
-    padding-left: 55px;
+    /* padding-left: 55px; */
     padding-bottom: 60px;
-    border-top: 1px solid
+    border-top: 1px solid;
+    padding-top: 25px;
+    text-align: start;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-wrap {
+    justify-content: flex-start;
+}
+
+.footer-item>address>p {
+    margin-top: 0px;
+    marker-end: 0px;
+}
+
+.siteMap {
+    justify-content: flex-end;
+}
+
+.footer-item {
+    padding-left: 100px;
+}
+
+.footer-wrap>img {
+    float: left;
 }
