--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,9 @@
     background-color: #fafafa
 }
 
-<<<<<<< HEAD
 
-/* .footer {
-=======
+/* 
 .footer {
->>>>>>> 8741a6a5bd7e6b4e933d8fdf528543790d1b03ac
     position: relative;
     min-width: 1081px;
     width: 1081px;
@@ -23,43 +20,4 @@
     padding-left: 55px;
     padding-bottom: 60px;
     border-top: 1px solid
-<<<<<<< HEAD
-} */
-
-.footer {
-    position: relative;
-    min-width: 1081px;
-    width: 1081px;
-    margin: 57px auto 0;
-    /* padding-left: 55px; */
-    padding-bottom: 60px;
-    border-top: 1px solid;
-    padding-top: 25px;
-    text-align: start;
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer-wrap {
-    justify-content: flex-start;
-}
-
-.footer-item>address>p {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    font-size: 50px;
-}
-
-.siteMap {
-    justify-content: flex-end;
-}
-
-.footer-item {
-    padding-left: 100px;
-}
-
-.footer-wrap>img {
-    float: left;
-=======
->>>>>>> 8741a6a5bd7e6b4e933d8fdf528543790d1b03ac
-}
+}  */
