--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,37 +1,51 @@
-.footer {
-    position: relative;
-    margin: 57px auto 0;
-    /* padding-left: 55px; */
-    padding-bottom: 60px;
-    border-top: 1px solid;
-    padding-top: 25px;
-    text-align: start;
-    display: flex;
-    justify-content: space-between;
+@media screen and (min-width: 601px) {
+    .footer {
+        position: relative;
+        min-width: 1081px;
+        width: 1081px;
+        margin: 57px auto 0;
+        /* padding-left: 55px; */
+        padding-bottom: 60px;
+        border-top: 1px solid;
+        padding-top: 25px;
+        text-align: start;
+        display: flex;
+        justify-content: space-between;
+    }
+    .footer-wrap {
+        justify-content: flex-start;
+    }
+    .footer-item>address>p {
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+    .siteMap {
+        justify-content: flex-end;
+    }
+    .footer-item {
+        padding-left: 100px;
+    }
+    .footer-wrap>img {
+        float: left;
+    }
 }
 
-.footer-wrap {
-    justify-content: flex-start;
-}
-
-.footer-item>address>p {
-    margin-top: 0px;
-<<<<<<< HEAD
-    margin-bottom: 0px;
-    font-size: 50px;
-=======
-    marker-end: 0px;
->>>>>>> 8741a6a5bd7e6b4e933d8fdf528543790d1b03ac
-}
-
-.siteMap {
-    justify-content: flex-end;
-}
-
-.footer-item {
-    padding-left: 100px;
-}
-
-.footer-wrap>img {
-    float: left;
+@media screen and (max-width:600px) {
+    .footer {
+        border-top: 1px solid;
+    }
+    .footer-wrap {
+        display: flex;
+        justify-content: center;
+        margin: 10px;
+    }
+    .footer-item>p {
+        margin-bottom: 0px;
+    }
+    .siteMap {
+        text-align: center
+    }
+    .footer-wrap>img {
+        margin-right: 10px;
+    }
 }
