--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -33,6 +33,7 @@
 @media screen and (max-width:600px) {
     .footer {
         border-top: 1px solid;
+        padding-bottom: 30px;
     }
     .footer-wrap {
         display: flex;
