--- a/src/components/main/Maincolumn.css
+++ b/src/components/main/Maincolumn.css
@@ -17,7 +17,9 @@
         display: inline;
     }
     .main-column {
-        margin: 10%
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
