--- a/src/components/pages/Recruiting.css
+++ b/src/components/pages/Recruiting.css
@@ -14,13 +14,17 @@
     font-size: 94px;
 }
 
-
-/* .content-box {
+.content-box {
     position: relative;
-} */
+}
 
-.contents-life {
-    padding-bottom: 40px;
+table {
+    width: 700px;
+    border: 0;
+    border-top: 1px solid #111111;
+    border-bottom: 1px solid #111111;
+    border-spacing: 2px;
+    margin-bottom: 40px;
 }
 
 @media screen and (max-width:600px) {
