구글폼 추가하고 css 약간 수정 현재는 히스토리 수정중

--- a/src/components/main/Maincolumn.css
+++ b/src/components/main/Maincolumn.css
@@ -21,6 +21,10 @@
         margin-left: auto;
         margin-right: auto;
     }
+    .btn-table {
+        display: flex;
+        justify-content: center;
+    }
 }
 
 @media screen and (min-width: 1080px) {
@@ -28,6 +32,3 @@
         width: 1080px;
     }
 }
-
-
-/*# sourceMappingURL=Maincolumn.css.map */
