--- a/src/components/lib/HIstory.css
+++ b/src/components/lib/HIstory.css
@@ -18,11 +18,15 @@
 
 @media screen and (max-width:600px) {
     .img_wrap {
-        display: inline;
+        flex-direction: column;
+        align-items: center;
     }
     .vertical_img {
         display: flex;
         justify-content: center;
         margin-bottom: 10px;
+    }
+    .img_wrap>img {
+        margin-bottom: 5%;
     }
 }
