add_count-component_&&_edit_css_to_%

--- a/src/components/pages/Recruiting.css
+++ b/src/components/pages/Recruiting.css
@@ -19,7 +19,7 @@
 }
 
 table {
-    width: 700px;
+    width: 100%;
     border: 0;
     border-top: 1px solid #111111;
     border-bottom: 1px solid #111111;
@@ -27,7 +27,7 @@ table {
     margin-bottom: 40px;
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:768px) {
     .content-box {
         background-image: url(https://firebasestorage.googleapis.com/v0/b/fbtestdw.appspot.com/o/shotDivider.svg?alt=media&token=dcb0e06a-902b-406e-afb1-c5217643ba34);
         background-repeat: no-repeat;
@@ -66,9 +66,9 @@ table {
     }
 }
 
-@media screen and (min-width:601px) {
+@media screen and (min-width:769px) {
     .content-wrapper {
-        width: 1236px;
+        width: 100%;
     }
     .contents-header {
         height: 230px;
@@ -77,7 +77,7 @@ table {
         display: flex;
     }
     .content-box>header {
-        width: 205px;
+        width: 25%;
         /* position: absolute;
         top: 0px;
         left: 0px; */
@@ -88,7 +88,7 @@ table {
         /* background-position: 0 0; */
     }
     .content-box>.card {
-        width: 700px;
+        width: 55%;
         padding-top: 21px;
         font-size: 16px;
         background-image: url(https://firebasestorage.googleapis.com/v0/b/fbtestdw.appspot.com/o/longDivider.svg?alt=media&token=de6143e9-5e14-425c-8b23-5f983e5898fd);
@@ -100,7 +100,7 @@ table {
         padding-top: 21px;
         font-size: 12px;
         line-height: 19px;
-        width: 152px;
+        width: 20%;
         margin-bottom: 10%;
     }
 }
