--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 @charset "utf-8";
 @import url(//fonts.googleapis.com/earlyaccess/hanna.css);
+html,
+body,
+#root,
+.App {
+    width: 100%;
+    height: 100%;
+}
+
 * {
     padding: 0;
     box-sizing: border-box;
