--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,16 +1,17 @@
+.footer {
+    margin-top: 10%;
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
 @media screen and (min-width: 601px) {
     .footer {
         position: relative;
-        min-width: 1081px;
-        width: 1081px;
-        margin: 57px auto 0;
-        /* padding-left: 55px; */
-        padding-bottom: 60px;
         border-top: 1px solid;
         padding-top: 25px;
         text-align: start;
         display: flex;
-        justify-content: space-between;
+        /* justify-content: space-between; */
     }
     .footer-wrap {
         justify-content: flex-start;
@@ -26,7 +27,7 @@
         padding-left: 100px;
     }
     .footer-wrap>img {
-        float: left;
+        /* float: left; */
     }
 }
 
