--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,6 +2,7 @@
     margin-top: 10%;
     margin-right: 5%;
     margin-left: 5%;
+    /* background-color: #fafafa */
 }
 
 @media screen and (min-width: 601px) {
@@ -11,7 +12,7 @@
         padding-top: 25px;
         text-align: start;
         display: flex;
-        /* justify-content: space-between; */
+        justify-content: space-between;
     }
     .footer-wrap {
         justify-content: flex-start;
