--- a/src/components/main/MainVideo.css
+++ b/src/components/main/MainVideo.css
@@ -5,7 +5,7 @@ h1 {
 .media-container {
     position: relative;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     top: 0;
     padding-bottom: 56.25%;
 }
