--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,17 @@ body,
 .App {
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
 
 * {
     padding: 0;
     box-sizing: border-box;
+    background-color: #fafafa;
 }
 
 .App {
     text-align: center;
     font-family: 'Hanna', fantasy;
-    background-color: #fafafa
+    background-color: #fafafa;
 }
