--- a/src/components/main/Maincolumn.css
+++ b/src/components/main/Maincolumn.css
@@ -9,10 +9,9 @@
 }
 
 .main-column {
-    min-width: 320px;
-    width: 33%;
-    margin-right: 5%;
-    /* margin-left: 5%; */
+    width: 30%;
+    margin-right: 2%;
+    margin-left: 2%;
 }
 
 @media screen and (max-width: 600px) {
@@ -20,6 +19,7 @@
         display: inline;
     }
     .main-column {
+        min-width: 320px;
         display: block;
         margin-left: auto;
         margin-right: auto;
